--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ h1, h2 {
 	margin-bottom: 20px;
 }
 #game {
-	background-color: #333;
+	background-color: #444;
 	height: 460px;
 	width: 460px;
 	position: relative;
@@ -50,8 +50,15 @@ h1, h2 {
 	text-align: center;
 }
 #play {
-	height: 25px;
-	width: 100px;
+	background-color: transparent;
+	font-size: 1em;
+	height: 40px;
+	width: 120px;
+	border: 2px solid #444;
+	border-radius: 10px;
+}
+#play:active {
+	background-color: #eee;
 }
 .italics {
 	font-style: italic;
