CSS: Changed flash div background-colors to make animation brighter. JS: Removed $() from tiles.click() as it seemed redundant. Seems to work.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@ h1 {
 	left: -8px;
 }
 #flash-red {
-	background-color: #e8bdbd;
+	background-color: #d89090;
 	top: -8px;
 	left: -8px;
 }
@@ -42,7 +42,7 @@ h1 {
 	right: -8px;
 }
 #flash-yellow {
-	background-color: #fff3b2;
+	background-color: #ffef99;
 	bottom: -8px;
 	right: -8px;
 }
@@ -52,7 +52,7 @@ h1 {
 	left: -8px;
 }
 #flash-green {
-	background-color: #bdd6bd;
+	background-color: #90bc90;
 	bottom: -8px;
 	left: -8px;
 }
@@ -62,7 +62,7 @@ h1 {
 	right: -8px;
 }
 #flash-blue {
-	background-color: #b8b8e1;
+	background-color: #a0a0d7;
 	top: -8px;
 	right: -8px;
 }
