Added p tag for high score, styled and coded JS to display on game end. Shortened the animateSequence .fadeIn() to 600 and lengthened the overall setTimeout to 1500. Added setTimeout to instructions.html in playerGo(). Moved the code that hides play button, pressPlay.attr('hidden', true), to the button handler itself.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,12 @@ body {
 h1 {
 	margin-left: 20px;
 }
+#score {
+	position: absolute;
+	margin-right: 25px;
+	top: 15px;
+	right: 50px;
+}
 #h1 {
 	border-bottom: 1px solid #000;
 	margin-bottom: 20px;
