--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
-	margin: 0;
+	background-color: #f0ede8;
 	font-family: Helvetica, Arial, sans-serif;
+	margin: 0;
 }
 h1 {
 	margin-left: 20px;
