--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
-	background-color: #f0ede8;
+	background-color: #f0f0f0;
+	color: #303030;
 	font-family: Helvetica, Arial, sans-serif;
 	margin: 0;
 }
@@ -13,16 +14,16 @@ h1 {
 	right: 50px;
 }
 #h1 {
-	border-bottom: 1px solid #000;
+	border-bottom: 1px solid #303030 ;
 	margin-bottom: 20px;
 }
 #game {
-	background-color: #444;
+	background-color: #303030;
 	height: 460px;
 	width: 460px;
 	position: relative;
 	margin: auto;
-	border: 25px solid #444;
+	border: 25px solid #303030;
 	border-radius: 50%;
 	overflow: hidden;	
 }
@@ -80,10 +81,11 @@ h1 {
 }
 #play {
 	background-color: transparent;
+	color: #303030 ;
 	font-size: 1em;
 	height: 40px;
 	width: 120px;
-	border: 2px solid #444;
+	border: 2px solid #303030 ;
 	border-radius: 10px;
 }
 #play:active {
