--- a/public/css/style-lego.css
+++ b/public/css/style-lego.css
@@ -2,7 +2,7 @@ body {
 	background-image: url(/img/lego-gray.jpg);
 	background-size: cover;
 	background-repeat: repeat-y;
-	color: #000;
+	color: #fff;
 	font-family: 'Comic Sans MS', cursive;
 	font-weight: bolder;
 	margin: 0;
@@ -24,38 +24,45 @@ div.options {
 	float: left;
 	margin-left: 20px;
 }
-button {
+button.options, button.play {
 	background-color: #ddd;
 	font-family: 'Comic Sans MS', cursive;
 	border: 2px solid #303030 ;
-	border-radius: 10px;
+	border-radius: 8px;
+	margin-bottom: 5px;
+}
+button.options {
+	display: block;
+	height: 35px;
+	width: 75px;
+	font-size: .9em;
 }
 #score {
 	position: absolute;
 	margin-right: 25px;
-	top: 15px;
+	top: 25px;
 	right: 50px;
 }
 #game {
-	background-color: #303030;
-	height: 460px;
-	width: 460px;
+	background-color: transparent;
+	height: 420px;
+	width: 680px;
 	position: relative;
 	margin: auto;
-	border: 25px solid #303030;
+	/*border: 25px solid #303030;*/
 	/*border-radius: 50%;*/
 	overflow: hidden;	
 }
 .tiles, .flash {
 	position: absolute;
-	height: 220px;
-	width: 220px;
+	height: 200px;
+	width: 330px;
 	margin: 10px;
 	border-radius: 15px;
 }
 #red {
 	background-image: url(/img/lego-red.jpg);
-	background-size: 230px 230px;
+	background-size: cover;
 	top: -8px;
 	left: -8px;
 }
@@ -66,7 +73,7 @@ button {
 }
 #yellow {
 	background-image: url(/img/lego-yellow.jpg);
-	background-size: 230px 230px;
+	background-size: cover;
 	bottom: -8px;
 	right: -8px;
 }
@@ -78,7 +85,7 @@ button {
 #green {
 	background-image: url(/img/lego-green.jpg);
 	bottom: -8px;
-	background-size: 230px 230px;
+	background-size: cover;
 	left: -8px;
 }
 #flash-green {
@@ -88,7 +95,7 @@ button {
 }
 #blue {
 	background-image: url(/img/lego-blue.jpg);
-	background-size: 230px 230px;
+	background-size: cover;
 	top: -8px;
 	right: -8px;
 }
@@ -103,7 +110,6 @@ button {
 	text-align: center;
 }
 #play {
-	color: #303030 ;
 	font-size: 1em;
 	height: 40px;
 	width: 120px;
