--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,10 +18,20 @@ div.options {
 	float: left;
 	margin-left: 20px;
 }
+button.options {
+	display: block;
+	background-color: transparent;
+	height: 35px;
+	width: 75px;
+	font-size: .9em;
+	border: 2px solid #303030;
+	border-radius: 8px;
+	margin-bottom: 5px;
+}
 #score {
 	position: absolute;
 	margin-right: 25px;
-	top: 15px;
+	top: 25px;
 	right: 50px;
 }
 #game {
